database fixes + start of UI

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ requests = "*"
 mysql-connector-python = "*"
 python-dotenv = "*"
 peewee = "*"
+pymysql = "*"
 
 [requires]
 python_version = "3.8"
